k8s/basic-apps/calibre.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: basic-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      securityContext:
        fsGroup: 911
      containers:
        - name: calibre
          image: linuxserver/calibre:7.26.0
          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: content
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
            - name: run
              mountPath: /run
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: books
          persistentVolumeClaim:
            claimName: calibre-books
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: basic-apps
spec:
  selector:
    app: calibre
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: content
      port: 8081
      targetPort: content
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress
  namespace: basic-apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: basic-apps-calibre-stripprefix@kubernetescrd
spec:
  rules:
    - host: books.adair.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  name: http
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  name: content
  tls:
    - secretName: calibre-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: calibre-stripprefix
  namespace: basic-apps
spec:
  stripPrefix:
    prefixes:
      - /content
    forceSlash: true
