k8s/basic-apps/it-tools.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools-deployment
  namespace: basic-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  namespace: basic-apps
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  namespace: basic-apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: it-tools.adair.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-service
                port:
                  number: 80
  tls:
    - secretName: it-tools-tls
