k8s/basic-apps/miniflux.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: basic-apps
  labels:
    app: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: miniflux
              mountPath: /var/lib/miniflux
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: miniflux
          persistentVolumeClaim:
            claimName: miniflux
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: basic-apps
spec:
  selector:
    app: miniflux
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux-db
  namespace: basic-apps
  labels:
    app: miniflux-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux-db
  template:
    metadata:
      labels:
        app: miniflux-db
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-db
  namespace: basic-apps
spec:
  selector:
    app: miniflux-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: basic-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`feed-reader.adair.cloud`)
      kind: Rule
      services:
        - name: miniflux
          port: 80
  tls:
    secretName: miniflux-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: basic-apps
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux-http-redirect
  namespace: basic-apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`feed-reader.adair.cloud`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: miniflux
          port: 80
